--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,9 @@ public/mds/
 
 # dependencies
 /node_modules
+package-lock.json
 /.pnp
 .pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
 # testing
 /coverage
@@ -27,8 +23,6 @@ public/mds/
 
 # debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
 
 # typescript
