--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "homepage": "https://remcoslootmaekersucll.github.io/DigitalForensicsDemo",
   "name": "forensics_demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start": "next start",
     "build": "next build",
-    "start": "next start"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
@@ -20,6 +23,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "gh-pages": "^6.3.0",
     "react-markdown": "^10.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
